--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-router-devtools": "^1.130.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-yaml": "^4.1.0",
     "lucide-react": "^0.535.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -28,11 +29,13 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@tanstack/router-plugin": "^1.130.9",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "eslint": "^9.30.1",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
