--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.85.6",
     "@tanstack/react-router": "^1.130.9",
     "@tanstack/react-router-devtools": "^1.130.9",
     "axios": "^1.11.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
     "@tanstack/router-plugin": "^1.130.9",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.1.0",
