--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@tanstack/react-query": "^5.85.6",
     "@tanstack/react-router": "^1.130.9",
     "@tanstack/react-router-devtools": "^1.130.9",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "js-yaml": "^4.1.0",
+    "libphonenumber-js": "^1.12.15",
     "lucide-react": "^0.535.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
