--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@faker-js/faker": "^10.0.0",
     "@tanstack/eslint-plugin-query": "^5.83.1",
     "@tanstack/router-plugin": "^1.130.9",
     "@types/js-yaml": "^4.0.9",
