--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.1.0",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
