--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "use-debounce": "^10.0.6",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
